5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1832_1656.log
== TEST (2019-06-13 18:10:12) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=.split(',')
-- ERROR:
File "XXXX", line 3
    x=.split(',')
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:10:18) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=x.split(',')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:10:22) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=x.split(',')
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:10:40) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=x.split(,)
print(x)
-- ERROR:
File "XXXX", line 3
    x=x.split(,)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:13:25) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=x.split(',')
b=0
e=0
f=0
i=0
p=0
for i in x:
	if(i=="BE"):
		b=b+1
	elif(i=="ES"):
		e=e+1
	elif(i=="FR"):
		f=f+1
	elif(i=="IT"):
		i=i+1
	elif(i=="PT"):
		p=p+1
m=zeros(5,dtype=int)
m[0]=m[0]+b
m[1]=m[1]+e
m[2]=m[2]+f
m[3]=m[3]+i
m[4]=m[4]+p
print(max(m))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:13:50) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=x.split(',')
b=0
e=0
f=0
j=0
p=0
for i in x:
	if(i=="BE"):
		b=b+1
	elif(i=="ES"):
		e=e+1
	elif(i=="FR"):
		f=f+1
	elif(i=="IT"):
		j=j+1
	elif(i=="PT"):
		p=p+1
m=zeros(5,dtype=int)
m[0]=m[0]+b
m[1]=m[1]+e
m[2]=m[2]+f
m[3]=m[3]+j
m[4]=m[4]+p
print(max(m))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:14:09) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=x.split(',')
b=0
e=0
f=0
j=0
p=0
for i in x:
	if(i=="BE"):
		b=b+1
	elif(i=="ES"):
		e=e+1
	elif(i=="FR"):
		f=f+1
	elif(i=="IT"):
		j=j+1
	elif(i=="PT"):
		p=p+1
m=zeros(5,dtype=int)
m[0]=m[0]+b
m[1]=m[1]+e
m[2]=m[2]+f
m[3]=m[3]+j
m[4]=m[4]+p
print(max(m))
print(m)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:14:16) 
-- CODE:
from numpy import*
x=input("Digite as silgas dos paises: ")
x=x.split(',')
b=0
e=0
f=0
j=0
p=0
for i in x:
	if(i=="BE"):
		b=b+1
	elif(i=="ES"):
		e=e+1
	elif(i=="FR"):
		f=f+1
	elif(i=="IT"):
		j=j+1
	elif(i=="PT"):
		p=p+1
m=zeros(5,dtype=int)
m[0]=m[0]+b
m[1]=m[1]+e
m[2]=m[2]+f
m[3]=m[3]+j
m[4]=m[4]+p
print(max(m))
print(m)

		
-- EXECUTION TIME:
1.00623
-- TEST CASE 1:
---- input:
IT,FR,BE,BE,BE,ES,PT
---- correct output:
3
[3 1 1 1 1]
---- user output:
3
[3 1 1 1 1]
-- TEST CASE 2:
---- input:
PT,FR,FR,FR,FR,FR,PT,PT,ES,PT,ES,ES,ES,PT,IT
---- correct output:
5
[0 4 5 1 5]
---- user output:
5
[0 4 5 1 5]
-- TEST CASE 3:
---- input:
BE,IT,BE,IT,IT,BE,PT,IT,ES,PT,IT,PT,IT,IT,ES,ES,FR,FR,BE,PT,FR,ES,ES,FR,PT,BE,IT,PT,IT,PT,PT,IT
---- correct output:
10
[ 5  5  4 10  8]
---- user output:
10
[ 5  5  4 10  8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
